# motor_platform

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cpp_check.sh  format.sh  python_format.sh  python_unit_test.sh
.github/workflows/: cpp_check.sh  cpp_check.yaml  format.yaml  python_format.yaml  python_unit_test.yaml  unit_test.sh  unit_test.yaml
emb/core_task/: core_task.ino
emb/core_task/src/: actuator_interface.cpp  actuator_interface.h  core_task.h  sensor_interface.cpp  sensor_interface.h
emb/core_task/src/actuators/: brushed_motor.cpp  brushed_motor.h  motor.cpp  motor.h
emb/core_task/src/applications/: teleop.cpp  teleop.h
emb/core_task/src/components/: controller.cpp  controller.h  controller_json_provider.cpp  controller_json_provider.h  platform.cpp  platform.h  platform_json_provider.cpp  platform_json_provider.h  state_estimation.cpp  state_estimation.h  state_estimation_json_provider.cpp  state_estimation_json_provider.h
emb/core_task/src/config/: hardware_config.cpp  hardware_config.h  hardware_limits.cpp  hardware_limits.h  platform_config.cpp  platform_config.h  platform_interface_config.cpp  platform_interface_config.h  teleop_config.cpp  teleop_config.h
emb/core_task/src/hardware/: button.cpp  button.h  button_json_provider.cpp  button_json_provider.h  quadrature_encoder.cpp  quadrature_encoder.h  tb6612fng.cpp  tb6612fng.h  tb6612fng_json_provider.cpp  tb6612fng_json_provider.h
emb/core_task/src/interfaces/: actuator_interface.cpp  actuator_interface.h  platform_interface.cpp  platform_interface.h  platform_interface_json_provider.cpp  platform_interface_json_provider.h  sensor_interface.cpp  sensor_interface.h  state_estimation_interface.cpp  state_estimation_interface.h
emb/core_task/src/sensors/: quadrature_encoder.cpp  quadrature_encoder.h
emb/core_task/src/types/: common.h  header.cpp  header.h  input.cpp  input.h  measurement.cpp  measurement.h  state.cpp  state.h  status.h  timestamp.cpp  timestamp.h
emb/core_task/src/utilities/: common.h  serialize.cpp  serialize.h  time.cpp  time.h
emb/core_task/test/actuators/: test_brushed_motor.cpp
emb/core_task/test/applications/: test_teleop.cpp
emb/core_task/test/components/: test_controller.cpp  test_controller_json_provider.cpp  test_platform.cpp  test_platform_json_provider.cpp  test_state_estimation.cpp  test_state_estimation_json_provider.cpp
emb/core_task/test/interfaces/: test_actuator_interface.cpp  test_sensor_interface.cpp  test_state_estimation_interface.cpp
emb/core_task/test/sensors/: test_quadrature_encoder.cpp
emb/core_task/test/types/: test_timestamp.cpp
emb/core_task/test/utilities/: test_common.cpp  test_serialize.cpp  test_time.cpp
scripts/: plot_state.py  run_logger.py
src/motor_platform/: .gitignore  README.md  plot_state.py  pyproject.toml
src/motor_platform/motor_platform/: plots.py  types.py
src/motor_platform/motor_platform/types/: header.py  input.py  measurement.py  state.py  timestamp.py
src/motor_platform/motor_platform/utilities/: json_utilities.py
src/motor_platform/scripts/: plot_state.py
src/motor_platform/test/types/: test_timestamp.py
src/motor_platform/test/utilities/: test_json_utilities.py
