[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motor_platform"
version = "0.0.1"
requires-python = ">=3.8"
authors = [
    { name="Jack Center", email="jack.d.center@gmail.com"}
]
description = "A package to create convinience libraries for analyzing data from the greater motor_platform project"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/jackcenter/motor_platform"
Issues = "https://github.com/jackcenter/motor_platform/issues"

[tool.unittest]
testpaths = ["test"]